Fixed query for players today's tournaments.  Reduced gaps between salutation lines on home screen to fit the 'today' buttons better.

--- a/client/src/app/home/home/home.component.scss
+++ b/client/src/app/home/home/home.component.scss
@@ -5,10 +5,15 @@ button.icon-button {
   height: 80px;
   text-align: center;
   vertical-align: middle;
+  margin-top: 20px;
 
   mat-icon {
     font-size: 38px;
     height: 38px;
     width: 38px;
   }
+}
+
+.salutation {
+  margin-bottom: 24px !important;
 }
